# tsarina

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  deploy.sh  develop.sh  format.sh  lint.sh  mkdocs.yml  pyproject.toml  test.sh
.github/workflows/: docs.yml  release.yml  tests.yml
ctabase/: __init__.py  cli.py  downloads.py  evidence.py  iedb.py  mutations.py  partition.py  peptides.py  regions.py  scoring.py  tissues.py  viral.py
ctabase/data/: cancer-testis-antigens.csv
docs/: curation.md  index.md
hitlist/: __init__.py  cli.py  downloads.py  gene_sets.py  iedb.py  mutations.py  partition.py  peptides.py  scoring.py  targets.py  viral.py
perseo/: __init__.py  alleles.py  cli.py  downloads.py  iedb.py  mutations.py  negatives.py  panels.py  partition.py  peptides.py  personalize.py  scoring.py  targets.py  viral.py
perseus/: __init__.py  cli.py  downloads.py  iedb.py  loader.py  mutations.py  negatives.py  panels.py  partition.py  peptides.py  personalize.py  scoring.py  targets.py  viral.py
scripts/: add_cta_gene.py  add_xage2.py  backfill_aliases.py  cta_sources.py  regenerate_hpa_cancer_prevalence.py  regenerate_table.py  sync_proteoform_groups.py
tasks/: curation_tissue_logic_report.md  lessons.md  todo.md
tests/: conftest.py  test_alleles.py  test_cancer_expression.py  test_cli_common.py  test_cli_data_friendliness.py  test_cli_help_color.py  test_cli_hits.py  test_cli_hits_filters.py  test_cli_hits_refs.py  test_cli_no_leading_parens.py  test_cli_personalize.py  test_cli_reference.py  test_cli_spanning.py  test_datasources.py  test_downloads.py  test_evidence.py  test_export.py  test_gene_sets.py  test_hitlist_integration.py  test_iedb.py  test_indexing.py  test_kmer_caching.py  test_mhc.py  test_ms_evidence.py  test_mutations.py  test_negatives.py  test_panels.py  test_personalize.py  test_public_api.py  test_qc.py  test_reference_data.py  test_regions.py  test_scoring.py  test_spanning.py  test_targets.py  test_tiers.py  test_tissues.py  test_viral.py
tests/fixtures/hitlist_mini/: observations.parquet  peptide_mappings.parquet
tsarina/: __init__.py  alleles.py  cancer_expression.py  cli.py  cli_common.py  cli_hits.py  cli_personalize.py  cli_spanning.py  datasources.py  downloads.py  evidence.py  export.py  gene_sets.py  hpa.py  iedb.py  indexing.py  loader.py  mhc.py  ms_evidence.py  mscuration.py  mtec.py  mutations.py  negatives.py  panels.py  partition.py  peptides.py  perseus.py  personalize.py  qc.py  reference_data.py  regions.py  scoring.py  selection.py  spanning.py  targets.py  tiers.py  tissues.py  version.py  viral.py
tsarina/data/: cancer-testis-antigens.csv  hpa-cancer-ihc-prevalence.csv  hpa-cancer-rna-prevalence.csv  proteoform-groups.csv
