[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctabase"
dynamic = ["version"]
description = "Curated cancer-testis antigen gene sets, HLA allele panels, and pMHC utilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
partition = [
    "pyensembl",
]
peptides = [
    "pyensembl",
]
all = [
    "pyensembl",
]
dev = [
    "pyensembl",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
ctabase-data = "ctabase.cli:main"

[project.urls]
Homepage = "https://github.com/pirl-unc/ctabase"
Repository = "https://github.com/pirl-unc/ctabase"

[tool.setuptools.dynamic]
version = {attr = "ctabase.version.__version__"}

[tool.setuptools.packages.find]
include = ["ctabase*"]

[tool.setuptools.package-data]
ctabase = ["data/*.csv"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["ctabase", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without explicit strict
    "SIM108", # use ternary operator instead of if-else
    "UP007",  # use X | Y for type unions (need Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "RUF012"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["ctabase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ctabase"]
omit = ["ctabase/version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
